--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ a {
 
 img {
     max-width: 100%;
+    display: block;
+    border-radius: 0.3rem;
 }
 
 body {
@@ -91,4 +93,14 @@ header nav a:hover {
 
 .sidenav li a:hover {
     background-color: #b07dfb;
+}
+
+/* Adverts */
+.adverts {
+    grid-area: adverts;
+    background-color: #fafbfc;
+    display: grid;
+    align-content: start;
+    padding: 2rem;
+    gap: 2rem;
 }
